Initial Ether-1 Commit

--- a/public/tpl/page-head.html
+++ b/public/tpl/page-head.html
@@ -2,8 +2,9 @@
     <!-- BEGIN PAGE TITLE -->
     <div class="page-title">
         <h1>
-            <span data-ng-bind="$state.current.data.pageTitle"></span>
-            <small data-ng-bind="$state.current.data.pageSubTitle"></small>
+         <!--   <span data-ng-bind="$state.current.data.pageTitle" style="color:#0d0d0d;"></span>
+            <small data-ng-bind="$state.current.data.pageSubTitle" style="color:#97084f;"></small>-->
+          <!--  <span data-ng-bind="$state.current.data.pageSubTitle" style="color:#97084f;"></span>-->
         </h1>
     </div>
     <!-- END PAGE TITLE -->
