--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -1,49 +1,45 @@
-<!-- BEGIN PRE-FOOTER -->
-<div class="page-prefooter">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-                <h2>About</h2>
-                <p> {{settings.about}} </p>
-                <p> Powered by <a href="https://github.com/ethereumproject/explorer" target="_blank">ETC Explorer</a> </p>
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
-                <h2>Follow Us On</h2>
-                <ul class="social-icons">
-                    <li>
-                        <a ng-show="settings.rss" href="{{settings.rss}}" data-original-title="rss" class="rss"></a>
-                    </li>
-                    <li>
-                        <a ng-show="settings.reddit" href="{{settings.reddit}}" data-original-title="reddit" class="reddit"></a>
-                    </li>
-                    <li>
-                        <a ng-show="settings.twitter" href="{{settings.twitter}}" data-original-title="twitter" class="twitter"></a>
-                    </li>
-                    <li>
-                        <a ng-show="settings.github" href="{{settings.github}}" data-original-title="github" class="github"></a>
-                    </li>
-                    <li>
-                        <a ng-show="settings.linkedin" href="{{settings.linkedin}}" data-original-title="linkedin" class="linkedin"></a>
-                    </li>
-                </ul>
-            </div>
-            <div ng-show="settings.symbol == 'ETC'" class="col-md-6 col-sm-12 col-xs-12 footer-block">
-                <h2>Help, it's Broken!</h2>
-                <address class="margin-bottom-40"> 
-                    <br>Open an Issue: <a href="https://github.com/ethereumproject/explorer/issues">github</a>
-                    <br> <a href="mailto:elaine.ou@gmail.com">Email bug reports</a>
-                    <br> <a href="https://twitter.com/eiaine">Twit</a>
-                </address>
-            </div>
-        </div>
-    </div>
+<div class="footer" style="background-color:#0d0d0d; overflow: auto;">
+<div class="container">
+
+<div class="footer-info">
+<ul>
+<center>
+
+<li>
+<span><a href="mailto:admin@ether1.org"><img src="images/mail-icon.png" alt=""></a></span>
+<a href="mailto:admin@ether1.org"><h4>E-Mail Us</h4></a>
+</li>
+
+<li>
+<span><a href="https://discord.gg/RA4AZx9"><img src="images/discord-icon.png" alt=""></a></span>
+<a href="https://discord.gg/RA4AZx9"><h4>Discord</h4></a>
+</li>
+
+<li>
+	<span><a href="https://old.reddit.com/r/etho1/"><img src="images/reddit-icon.png" alt=""></a></span>
+<a href="https://old.reddit.com/r/etho1/"><h4>Reddit</h4></a>
+</li>
+
+<li>
+<span><a href="https://twitter.com/Ether1Official"><img src="images/twitter-icon.png" alt=""></a></span>
+<a href="https://twitter.com/Ether1Official"><h4>Twitter</h4></a>
+</li>
+
+<li>
+<span><a href="https://t.me/Ether_1"><img src="images/telegram-icon.png" alt=""></a></span>
+<a href="https://t.me/Ether_1"><h4>Telegram</h4></a>
+</li>
+	
+<li>
+<span><a href="https://facebook.com/ether1official"><img src="images/fb-icon.png" alt=""></a></span>
+<a href="https://facebook.com/ether1official"><h4>Facebook</h4></a>
+</li>
+
+</center>
+</ul>
 </div>
-<!-- END PRE-FOOTER -->
-<!-- BEGIN POST-FOOTER -->
-<div class="page-footer">
-    <div class="container" ng-bind-html="settings.copyright"></div>
+
+<div class="footer-bottom">Copyright © 2018 - Ether-1</div>
+
 </div>
-<div class="scroll-to-top">
-    <i class="icon-arrow-up"></i>
 </div>
-<!-- END POST-FOOTER -->
