--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://ether1.org/index.html"><img src="https://ether1.org/images/logo.png" alt=""></a>
+          <a class="navbar-brand" href="https://ether1.org/index.html"><img src="images/logo.png" alt=""></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
@@ -17,7 +17,6 @@
             <li><a href="https://wallet.ether1.org">Wallet</a></li>
             <li><a href="https://explorer.ether1.org">Explorer</a></li>
             <li><a href="https://stats.ether1.org">Network</a></li>
-	    <li><a href="https://ether1.org/calendar/">Calendar</a></li>
 	    <li><a href="https://docs.ether1.org/">Docs</a></li>
           </ul>
         </div><!--/.nav-collapse -->
